--- a/src/main/resources/text/reference.html
+++ b/src/main/resources/text/reference.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Справка и помощь</title>
-    <link rel="stylesheet" type="text/css" href="Style.css">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
