add search a card number by regex in text

--- a/src/main/resources/text/reference.html
+++ b/src/main/resources/text/reference.html
@@ -21,8 +21,11 @@
         <li><a href="#select">Выделение текста</a></li>
         <li><a href="#back">Отмена действия</a></li>
         <li><a href="#forward">Повтор действия</a></li>
+        <li><a href="#regex">Регулярное выражение</a></li>
     </ol>
 </div>
+
+
 <h3 id="new">Создание файла</h3>
 <p>Чтобы создать файл, выберите в меню Файл пункт Создать.</p>
 <h3 id="open">Открытие файла</h3>
@@ -43,7 +46,21 @@
 <h3 id="back">Отмена действия</h3>
 <p>Чтобы отменить последнее действие, выберите в меню Правка пункт Отменить.</p>
 <h3 id="forward">Повтор действия</h3>
-<p>Чтобы повторить отмененное действие, выберите в меню Правка пункт Повторить.
+<p>Чтобы повторить отмененное действие, выберите в меню Правка пункт Повторить.</p>
+
+<br>
+<h3 id="regex">Регулярное выражение:</h3>
+<p>(?<=\D|^)\d{4}([-]|[ ]|)\d{4}([-]|[ ]|)\d{4}([-]|[ ]|)\d{4}(?=[\D]|$)</p>
+<h4>Описание регулярного выражения:</h4>
+<p>
+    (?<=\D|^) - Назад смотрящее условие, требует чтобы перед началом номера карты не было цифр<br>
+    \d{4}([-]|[ ]|)\d{4}([-]|[ ]|)\d{4}([-]|[ ]|)\d{4} - задает необходимое условие из последовтельности 4 груп из 4
+    цифр, разделенных между собой символами "-", " " или "" <br>
+    (?=[\D]|$) - Вперед смотрящее, требует чтобы после окончания номера карты не было цифр
 </p>
+<h4>Возможные типы карт и символы с которых они начинаются:</h4>
+<p> VISA("4"), MASTER_CARD("5"), WORLD("2")</p>
+<p>Во всех остальных случаях - UNKNOWN</p>
+
 </body>
 </html>
